# sciengdox

./: .flake8  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
example/: .gitignore  build.sh  example.bib  example.bibtex  example.md  pandoc-crossref.yaml  simple.md
example/template/: ieee.csl  technical-doc.html  technical-doc.latex
example/template/styles/: technical-doc.scss
sciengdox/: __init__.py  compiledoc.py  filter.py  text.py
sciengdox/constants/: __init__.py
sciengdox/figures/: __init__.py  figures.py
sciengdox/pandoc_pythonexec/: filter.py
sciengdox/tables/: __init__.py  tables.py
sciengdox/tests/: test_constants.py  test_figures.py  test_joke.py  test_tables.py
sciengdox/tests/units/: test_checks.py  test_conversions.py  test_print_quantity.py
sciengdox/units/: __init__.py  checks.py  conversions.py  unit_defs.txt
