[tool.poetry]
name = "sciengdox"
version = "0.11.0"
description = "Science/engineering dynamic doc generation"
authors = ["Greg Ingersoll <greg.ingersoll@convolutionresearch.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gbingersoll/sciengdox"
keywords = ["science", "engineering", "documentation", "scipy", "pandoc"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Linguistic",
]
include = ["README.md", "CHANGELOG.md", "sciengdox/units/unit_defs.txt"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
colorama = "^0.4.4"
numpy = "^1.22.2"
panflute = "^2.1.3"
Pint = "^0.18"
pysvglib = "^0.3.2"
scipy = "^1.8.0"
plotly = { version = "^5.6.0", optional = true }
matplotlib = { version = "^3.5.1", optional = true }
kaleido = { version = "0.2.1", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
ipython = "^8.1.0"
pytest = "^7.0.1"
PyYAML = "^6.0"
matplotlib = "^3.5.1"
mock = "^4.0.3"
pytest-mock = "^3.7.0"
setuptools = "^60.9.3"
twine = "^3.8.0"
wheel = "^0.38.1"

[tool.poetry.scripts]
compiledoc = 'sciengdox.compiledoc:main'
pandoc-pythonexec = 'sciengdox.pandoc_pythonexec.filter:main'

[tool.poetry.extras]
examples = ["kaleido", "matplotlib", "plotly"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

